--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <section class=" gallery">
             <div class="card">
                 <img class="card__image" src="./images/karachaevsk.jpg" alt="Карачаевск">
+
                 <h2 class="card__text">Карачаевск</h2>
                 <button class="card__heart" type="button"></button>
+
 
 
 
@@ -39,7 +41,7 @@
 
             <div class="card">
                 <img class="card__image" src="./images/gora-elbrus.jpg" alt="Гора Эльбрус">
-                <h2 class="card__text">Гора Эльбрус</h2>
+                <h3 class="card__text">Гора Эльбрус</h3>
                 <button class="card__heart" type="button"></button>
 
 
@@ -48,7 +50,7 @@
 
             <div class="card">
                 <img class="card__image" src="./images/dombai.jpg" alt="Домбай">
-                <h2 class="card__text">Домбай</h2>
+                <h3 class="card__text">Домбай</h3>
                 <button class="card__heart" type="button"></button>
 
 
@@ -57,7 +59,7 @@
 
             <div class="card">
                 <img class="card__image" src="./images/chelny.jpg" alt="Набережные Челны">
-                <h2 class="card__text">Набережные Челны</h2>
+                <h3 class="card__text">Набережные Челны</h3>
                 <button class="card__heart" type="button"></button>
 
 
@@ -66,7 +68,7 @@
 
             <div class="card">
                 <img class="card__image" src="./images/kazan1.jpg" alt="Казань">
-                <h2 class="card__text">Казань</h2>
+                <h3 class="card__text">Казань</h3>
                 <button class="card__heart" type="button"></button>
 
 
@@ -75,7 +77,7 @@
 
             <div class="card">
                 <img class="card__image" src="./images/moscow.jpg" alt="Москва">
-                <h2 class="card__text">Москва</h2>
+                <h3 class="card__text">Москва</h3>
                 <button class="card__heart" type="button"></button>
 
 
@@ -96,9 +98,8 @@
             <form name="popupform" class="popup__form">
 
 
-                <input class="popup__value" type="text" placeholder="Введите имя" id="popup-name" value="" name="name">
-                <input class="popup__value" type="text" placeholder="Введите должность" id="popup-job" value=""
-                    name="job">
+                <input class="popup__value" type="text" placeholder="Введите имя" id="popup-name" name="name">
+                <input class="popup__value" type="text" placeholder="Введите должность" id="popup-job" name="job">
 
 
                 <button class="popup__save-button" type="submit">
