--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="popup__preview">
             <button class="popup__close-button" type="button"></button>
-            <img class="popup__image-view" alt="" src="">
+            <img class="popup__image-view" src="example" alt="">
             <p class="popup__view-text"></p>
         </div>
     </div>
@@ -86,7 +86,7 @@
     <template class="clone-card">
         <div class="card">
             <button class="card__trash" type="button"></button>
-            <img class="card__image" src="" alt="">
+            <img class="card__image" src="example" alt="">
 
             <h3 class="card__text"></h3>
             <button class="card__heart" type="button"></button>
