--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
         </div>
 
     </template>
+    <script src="./scripts/constants.js"></script>
     <script src="./scripts/index.js"></script>
     <script src="./scripts/validate.js"></script>
+
 </body>
 
 </html>
